# house-price-predictor

./: .gitignore  README.md
.husky/: pre-commit
ci/: README.md  ci.bat  ci.ps1  ci.sh  docker-build-prediction.ps1  docker-run-prediction.ps1  e2e-run.ps1  e2e-stack.ps1  e2e-stack.sh  e2e.py  start-all.ps1  start-all.sh  start-estimator.ps1  start-market.ps1  start-portal.ps1  start-prediction.ps1  stop-all.ps1  stop-all.sh  stop-estimator.ps1  stop-market.ps1  stop-portal.ps1  stop-prediction.ps1
docs/: frontend.md  housing-price-prediction-api.md  market-analysis-api.md  price-prediction-api.md  property-market-analysis-backend.md
frontend/: .prettierignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/apps/prediction-portal/: .gitignore  .lintstagedrc.mjs  INTEGRATION.md  next.config.ts  package.json  playwright.config.ts  (+1 more)
services/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
services/market-analysis-api/: pom.xml
services/price-prediction-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/price-prediction-api/app/: main.py
services/price-prediction-api/app/ml/: base.py  linear_model.py  trainer.py
services/price-prediction-api/app/models/: schemas.py
services/price-prediction-api/app/utils/: metrics.py
services/price-prediction-api/demo/: demo.ps1  demo.sh
services/price-prediction-api/tests/: conftest.py  test_api.py  test_linear_model.py  test_metrics.py  test_schemas.py
services/price-prediction-api/tests/e2e/: test_docker_e2e.py
services/value-estimator-api/: .coverage
(+168 files in other folders)
