[project]
name = "price-prediction-api"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: docker-based end-to-end tests (require Docker running)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
